--- a/portal-de-noticias/package.json
+++ b/portal-de-noticias/package.json
@@ -2,7 +2,7 @@
   "name": "portal-de-noticias",
   "version": "1.0.0",
   "description": "aprendendo node com portal de noticias",
-  "main": "noticias.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fergo8/curso-nodejs#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.3"
   }
 }
