--- a/multiroom-chat/package.json
+++ b/multiroom-chat/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-validator": "^3.2.1",
+    "package.json": "^2.0.1",
     "socket.io": "^2.1.1"
   }
 }
