--- a/portal-de-noticias/package.json
+++ b/portal-de-noticias/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-validator": "^3.2.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "package.json": "^2.0.1"
   }
 }
