--- a/rpg-game-of-thrones/package.json
+++ b/rpg-game-of-thrones/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "consign": "^0.1.6",
+    "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-session": "^1.14.1",
+    "express-session": "^1.15.6",
     "express-validator": "^3.2.1",
     "mongodb": "^2.2.10"
   }
